--- a/src/components/LoginAndRegister/Register/styles.scss
+++ b/src/components/LoginAndRegister/Register/styles.scss
@@ -7,7 +7,6 @@
   flex-direction: column;
   color: white;
   font-size: 20px;
-  background-image: url("../../../../public/backgroudphoto.jpg");
   background-size: 800px 250px;
 }
 
@@ -18,6 +17,11 @@
 }
 
 .passcodeContainer{
+  display: flex;
+  justify-content: center;
+  margin: 20px auto;
+}
+.confirmPContainer{
   display: flex;
   justify-content: center;
   margin: 20px auto;
@@ -37,8 +41,18 @@
 .inputUsername{
   border-radius: 15px;
   border: white 2px solid;
+  font-size: 12px;
+  width: 160px;
 }
 .inputPasscode{
   border-radius: 15px;
   border: white 2px solid;
+  font-size: 12px;
+  width: 160px;
+}
+.confirmPasscode{
+  border-radius: 15px;
+  border: white 2px solid;
+  font-size: 12px;
+  width: 160px;
 }
