--- a/src/components/LoginAndRegister/styles.scss
+++ b/src/components/LoginAndRegister/styles.scss
@@ -1,30 +1,31 @@
-.loginFormContainer {
-   width: 600px;
-   height: 300px;
-  margin: 100px auto;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-  color: white;
-  font-size: 20px;
-  background-size: 800px 250px;
+.loginAndRegister{
+  background: url('../../../public/backgroudphoto.jpg') no-repeat;
+  background-size: 100%;
+  height: 100vh;
+  background-position: 100% 10%;
+}
+
+.loginButtonsContainer, .registerButtonsContainer{
+  padding: 2rem;
+  input[type=submit] {
+    background-color: #87a7e7;
+    border: none;
+    border-radius: 2rem;
+    color: white;
+    padding: 0.5rem 3rem;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
 .userNameContainer {
   display: flex;
   justify-content: center;
-  margin: 20px auto;
 }
 
 .passcodeContainer{
   display: flex;
   justify-content: center;
-  margin: 20px auto;
-}
-.loginButtonsContainer{
-  display: flex;
-  justify-content: space-between;;
-  margin: 30px 140px;
 }
 
 .userNameItem{
