--- a/src/components/LoginAndRegister/Switcher/styles.scss
+++ b/src/components/LoginAndRegister/Switcher/styles.scss
@@ -5,8 +5,9 @@
 }
 .overlay{
     width: 80%;
+    min-width: 45rem;
     margin: 0 auto;
-    border: 2px solid #9CBBF2;
+    border: 2px solid yellowgreen;
     box-shadow: 0 6px 12px rgb(131 171 230 / 18%);
     border-radius: 6px;
     .visible{
@@ -14,6 +15,10 @@
     }
     .hidden{
         display: none ;
+    }
+    button{
+      background-color: yellowgreen;
+      border:0.05rem  solid darkgreen;
     }
 }
 
