--- a/src/components/LoginAndRegister/styles.scss
+++ b/src/components/LoginAndRegister/styles.scss
@@ -1,5 +1,5 @@
 .loginAndRegister{
-  background: url('../../../public/backgroudphoto.jpg') no-repeat;
+  background: url('../../../public/backgroudphoto2.jpeg') no-repeat;
   background-size: 100%;
   height: 100vh;
   background-position: 100% 10%;
@@ -7,8 +7,11 @@
 
 .loginButtonsContainer, .registerButtonsContainer{
   padding: 2rem;
+  display: flex;
+  justify-content: center;;
+  margin: 30px 140px;
   input[type=submit] {
-    background-color: #87a7e7;
+    background-color: yellowgreen;
     border: none;
     border-radius: 2rem;
     color: white;
@@ -18,27 +21,22 @@
   }
 }
 
-.userNameContainer {
+.userNameContainer,.passcodeContainer {
+  margin: 20px auto;
   display: flex;
   justify-content: center;
 }
 
-.passcodeContainer{
-  display: flex;
-  justify-content: center;
+.userNameItem ,.passcodeItem{
+  margin:0 10px 0 0;
 }
 
-.userNameItem{
-  margin:0 10px 0 0;
-}
-.passcodeItem{
-  margin:0 10px 0 0;
-}
-.inputUsername{
+.inputUsername, .inputPasscode{
   border-radius: 15px;
   border: white 2px solid;
-}
-.inputPasscode{
-  border-radius: 15px;
+  font-size: 12px;
+  width: 160px;
   border: white 2px solid;
+  text-align: center;
 }
+
