--- a/src/components/common/PopupItem/styles.scss
+++ b/src/components/common/PopupItem/styles.scss
@@ -1,4 +1,4 @@
-$bg-color:"red";
+$bg-color:darkgreen;
 .modalOverlay {
   position: absolute;
   top: 0;
@@ -22,6 +22,7 @@ $bg-color:"red";
   box-shadow: 0 6px 12px rgb(0 0 0 / 18%);
   border-radius: 6px;
   .cancelBtn {
+    border-radius: unset;
     margin-right: 10px;
   }
 }
