1 change js files to tsx files; 2 change bg color 3 abstract types 4 modify some errors

--- a/src/components/LoginAndRegister/Switcher/styles.scss
+++ b/src/components/LoginAndRegister/Switcher/styles.scss
@@ -1,3 +1,4 @@
+$bg-yellowGreen:#3CB371;
 .switcherContainer{
     display: flex;
     align-items: center;
@@ -7,7 +8,7 @@
     width: 80%;
     min-width: 45rem;
     margin: 0 auto;
-    border: 2px solid yellowgreen;
+    border: 2px solid $bg-yellowGreen;
     box-shadow: 0 6px 12px rgb(131 171 230 / 18%);
     border-radius: 6px;
     .visible{
@@ -17,7 +18,7 @@
         display: none ;
     }
     button{
-      background-color: yellowgreen;
+      background-color: $bg-yellowGreen;
       border:0.05rem  solid darkgreen;
     }
 }
