--- a/src/components/LoginAndRegister/styles.scss
+++ b/src/components/LoginAndRegister/styles.scss
@@ -1,3 +1,4 @@
+$bg-yellowGreen:#3CB371;
 .loginAndRegister {
   background: url('../../../public/backgroudphoto2.jpeg') no-repeat;
   position: fixed;
@@ -21,7 +22,7 @@
   margin: 30px 140px;
 
   input{
-    background-color: yellowgreen;
+    background-color: $bg-yellowGreen;
     border: none;
     border-radius: 2rem;
     color: white;
@@ -51,4 +52,7 @@
   width: 160px;
   border: white 2px solid;
   text-align: center;
+}
+.inputPasscode {
+  margin-left: 5px;
 }
