move the backgroud picture to LoginAdnRegister folder

--- a/src/components/LoginAndRegister/styles.scss
+++ b/src/components/LoginAndRegister/styles.scss
@@ -1,6 +1,6 @@
 $bg-yellowGreen:#3CB371;
 .loginAndRegister {
-  background: url('../../../public/backgroudphoto2.jpeg') no-repeat;
+  background: url('./assets/backgroudphoto2.jpeg') no-repeat;
   position: fixed;
   top: 0;
   left: 0;
