--- a/src/components/LoginAndRegister/Switcher/styles.scss
+++ b/src/components/LoginAndRegister/Switcher/styles.scss
@@ -1,37 +1,60 @@
-$bg-yellowGreen:#3CB371;
-.switcherContainer{
+$bg-yellowGreen: #3CB371;
+
+.switcherContainer {
     display: flex;
     align-items: center;
     height: 100%;
 }
-.overlay{
-    width: 80%;
-    min-width: 45rem;
+
+.overlay {
+    width: 60%;
+    min-width: 40rem;
     margin: 0 auto;
     border: 2px solid $bg-yellowGreen;
     box-shadow: 0 6px 12px rgb(131 171 230 / 18%);
     border-radius: 6px;
-    .visible{
-        display: block ;
+    .visible {
+        display: block;
     }
-    .hidden{
-        display: none ;
+    .hidden {
+        display: none;
     }
-    button{
-      background-color: $bg-yellowGreen;
-      border:0.05rem  solid darkgreen;
+    button {
+        background-color: $bg-yellowGreen;
+        border: 0.05rem solid darkgreen;
+    }
+
+    @media (max-width:390px) {
+        position: relative;
+        right: 120px;
+        margin: 0px;
+        .visible {
+            .loginButtonsContainer,
+            .registerButtonsContainer {
+                padding: 2rem;
+                display: flex;
+                justify-content: center;
+                ;
+                margin: 3px 14px;
+            }
+            .leftItem {
+                display: none;
+            }
+        }
     }
 }
 
-.actionsContainer{
+.actionsContainer {
     display: flex;
-    justify-content: space-around;
-    .action{
+    justify-content: space-evenly;
+
+    .action {
         display: flex;
-        max-width: 600px;
+        max-width: 400px;
         align-items: center;
     }
-    .leftItem .btn{
+
+    .leftItem .btn {
         width: 100px;
     }
 }
