--- a/src/components/LoginAndRegister/Switcher/styles.scss
+++ b/src/components/LoginAndRegister/Switcher/styles.scss
@@ -13,12 +13,15 @@ $bg-yellowGreen: #3CB371;
     border: 2px solid $bg-yellowGreen;
     box-shadow: 0 6px 12px rgb(131 171 230 / 18%);
     border-radius: 6px;
+
     .visible {
         display: block;
     }
+
     .hidden {
         display: none;
     }
+
     button {
         background-color: $bg-yellowGreen;
         border: 0.05rem solid darkgreen;
@@ -28,17 +31,17 @@ $bg-yellowGreen: #3CB371;
         position: relative;
         right: 120px;
         margin: 0px;
+
         .visible {
+
             .loginButtonsContainer,
             .registerButtonsContainer {
-                padding: 2rem;
-                display: flex;
-                justify-content: center;
-                ;
                 margin: 3px 14px;
             }
+
             .leftItem {
-                display: none;
+                position: absolute;
+                bottom: 60px;
             }
         }
     }
